@@ -18,26 +18,32 @@
  */
 package groovy.lang;
 
+import java.math.BigInteger;
 
 /**
- * Tests {@link ObjectRange}s of {@link Integer}s.
- *
- * @author Edwin Tellman
+ * Tests {@link ObjectRange}s of {@link BigInteger}s.
  */
-public class IntegerRangeTest extends NumberRangeTest {
-
-    /**
-     * {@inheritDoc}
-     */
-    protected Range createRange(int from, int to) {
-        return new ObjectRange(new Integer(from), new Integer(to));
+public class BigIntegerObjectRangeTest extends NumberRangeTestCase {
+    @Override
+    protected void setUp() throws Exception {
+        super.setUp();
+        expectNullFromExhausted = true;
     }
 
     /**
      * {@inheritDoc}
      */
+    @Override
+    protected Range createRange(int from, int to) {
+        return new ObjectRange(BigInteger.valueOf(from), BigInteger.valueOf(to));
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
     protected Comparable createValue(int value) {
-        return new Integer(value);
+        return BigInteger.valueOf(value);
     }
 
 }
