@@ -18,27 +18,30 @@
  */
 package groovy.lang;
 
-import java.math.BigInteger;
-
 /**
- * Tests {@link ObjectRange}s of {@link BigInteger}s.
- *
- * @author Edwin Tellman
+ * Tests {@link ObjectRange}s of {@link Float}s.
  */
-public class BigIntegerRangeTest extends NumberRangeTest {
-
-    /**
-     * {@inheritDoc}
-     */
-    protected Range createRange(int from, int to) {
-        return new ObjectRange(BigInteger.valueOf(from), BigInteger.valueOf(to));
+public class FloatObjectRangeTest extends NumberRangeTestCase {
+    @Override
+    protected void setUp() throws Exception {
+        super.setUp();
+        expectNullFromExhausted = true;
     }
 
     /**
      * {@inheritDoc}
      */
+    @Override
+    protected Range createRange(int from, int to) {
+        return new ObjectRange(new Float(from), new Float(to));
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
     protected Comparable createValue(int value) {
-        return BigInteger.valueOf(value);
+        return new Double(value);
     }
 
 }
